[package]
name = "appgate-appgated"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde_json = "1.0"
kube = "0.55.0"
kube-runtime = "0.55.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }