[package]
name = "appgate-appgated"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["rustls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.56.0", default-features = false, features = ["admission", "rustls-tls"] }
kube-runtime = "0.56.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
rustls = "0.18.1"
log = "0.4.0"
env_logger = "0.7.1"