[package]
name = "sdp-k8s"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sdp-injector"
test = true
bench = false

[[bin]]
name = "sdp-identity-service"
test = true

[dependencies]
reqwest = { version = "0.11", features = ["hyper-rustls", "json"] }
actix-web = { version = "4", features = ["rustls"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.73.1", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
schemars = "0.8.10"
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_20"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.0"
futures = "0.3.21"
http = "0.2"
log = "0.4.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
base64 = "0.13.0"
env_logger = "0.7.1"
json-patch = "*"