[package]
name = "sdp-common"
version = "1.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdp-macros = { path = "../sdp-macros" }
sdp-test-macros = { path = "../sdp-test-macros" }

serde_json = "1.0"
tokio = { version = "~1.18", features = ["rt", "macros", "rt-multi-thread"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.74.0", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
schemars = "0.8.10"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11", features = ["hyper-rustls", "json"] }
http = "0.2"
log = "0.4.17"
json-patch = "*"
futures = "0.3.24"
const_format = "0.2.28"
rand = "0.8.5"
