[package]
name = "sdp-common"
version = "1.3.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdp-macros = { path = "../sdp-macros" }
sdp-test-macros = { path = "../sdp-test-macros" }

serde_json = "1.0"
tokio = { version = "~1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
chrono = { version = "~0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.87.1", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"]}
schemars = "0.8.16"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11", features = ["hyper-rustls", "json"] }
http = "0.2.12"
log = "0.4.21"
json-patch = "1.4.0"
futures = "0.3.30"
const_format = "0.2.32"
rand = "0.8.5"
