[package]
name = "sdp-device-id-service"
version = "1.0.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdp-common = {path = "../sdp-common"}
sdp-macros = { path = "../sdp-macros" }
sdp-proc-macros = { path = "../sdp-proc-macros" }
sdp-test-macros = { path = "../sdp-test-macros" }

clap = { version = "4.2.4", features = ["derive"] }
tokio = { version = "~1.28.0", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
kube = { version = "0.74.0", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
log = "0.4.17"
futures = "^0.3.28"
log4rs = "1.2.0"
