[package]
name = "sdp-device-id-service"
version = "1.1.1"
edition = "2021"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdp-common = {path = "../sdp-common"}
sdp-macros = { path = "../sdp-macros" }
sdp-proc-macros = { path = "../sdp-proc-macros" }
sdp-test-macros = { path = "../sdp-test-macros" }

clap = { version = "4.4.10", features = ["derive"] }
tokio = { version = "~1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
kube = { version = "0.87.1", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"]}
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
log = "0.4.20"
futures = "^0.3.29"
log4rs = "1.2.0"
