[package]
name = "sdp-identity-service"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sdp-identity-service"
test = true

[dependencies]
sdp-common = {path = "../sdp-common"}
sdp-macros = { path = "../sdp-macros" }
sdp-proc-macros = { path = "../sdp-proc-macros" }
sdp-test-macros = { path = "../sdp-test-macros" }

reqwest = { version = "0.11", features = ["hyper-rustls", "json"] }
tokio = { version = "~1.18", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
kube = { version = "0.74.0", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
schemars = "0.8.10"
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
futures = "^0.3.0"
http = "0.2"
log = "0.4.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
base64 = "0.13.0"
env_logger = "0.7.1"
json-patch = "*"
clap = { version = "3.2.17", features = ["derive"] }
log4rs = "1.2.0"
