[package]
name = "sdp-identity-service"
version = "1.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sdp-identity-service"
test = true

[dependencies]
sdp-common = {path = "../sdp-common"}
sdp-macros = { path = "../sdp-macros" }
sdp-test-macros = { path = "../sdp-test-macros" }

tokio = { version = "~1.44.0", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0"
kube = { version = "0.87.1", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"]}
futures = "^0.3.30"
log = "0.4.21"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
json-patch = "1.4.0"
clap = { version = "4.4.10", features = ["derive"] }
log4rs = "1.2.0"
async-trait = "0.1.80"
