[package]
name = "sdp-injector"
version = "1.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sdp-injector"
test = true
bench = false

[dependencies]
sdp-macros = { path = "../sdp-macros" }
sdp-common = { path = "../sdp-common" }
sdp-test-macros = { path = "../sdp-test-macros" }

tokio = { version = "~1.39.0", features = ["rt", "macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["server"]}
tls-listener = { version = "^0.5.0",  features = [ "rustls", "hyper-h1", "hyper-h2", "tokio-net", "rt" ] }
tokio-rustls = { version = "^0.23.0", features = [] }
serde_json = "1.0"
serde = { version= "1.0", features = ["derive"] }
kube = { version = "0.87.1", default-features = false, features = ["admission", "rustls-tls", "derive", "client", "runtime"] }
k8s-openapi = { version = "0.20.0", features = ["latest"]}
rustls = "0.20.6"
rustls-pemfile = "1.0.4"
futures-util = "0.3"
http = "0.2.12"
log = "0.4.21"
json-patch = "1.4.0"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
futures = "0.3.30"
log4rs = "1.2.0"
notify = { version = "6.1.1", default-features = false, features=["macos_kqueue"] }
async-trait = "0.1.80"
